infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: ticketing.dev
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /api/users/?(.*)
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - pathType: ImplementationSpecific
            path: /api/tickets/?(.*)
            backend:
              service:
                name: tickets-srv
                port:
                  number: 3000
          - pathType: ImplementationSpecific
            path: /api/orders/?(.*)
            backend:
              service:
                name: orders-srv
                port:
                  number: 3000
          - pathType: ImplementationSpecific
            path: /api/payments/?(.*)
            backend:
              service:
                name: payments-srv
                port:
                  number: 3000
          - pathType: ImplementationSpecific
            path: /?(.*)
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
